# Steganographie

./: .gitignore  CMakeLists.txt  CapaChecker.c  README.md  bitstream.h  decrypt.c  encrypt.c  main.c  pnghex.txt  pnghex2.txt  pngtest.c  pngwrap.c
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  stegano  steno  test_png
Release/MACOSX/: CMakeCache.txt  Makefile  cmake_install.cmake  test_png
lib/: bitstream.c  bitstream.h  color.c  color.h  message.c  message.h  neobitstream.c  neobitstream.h  stegano.c  stegano.h
